commons/deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librarika-fpm
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      layer: fpm
  template:
    metadata:
      labels:
        app: librarika-fpm
        tier: backend
        layer: fpm
    spec:
      containers:
      - name: librarika-fpm
        image: ghcr.io/alvianto21/ghcr.io/librarika_fpm:master
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            cpu: "1000m"
            memory: "3000Mi"
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: librarika-fpm-service
spec:
  selector:
    tier: backend
    layer: fpm
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librarika-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      layer: web-server
  template:
    metadata:
      labels:
        app: librarika-nginx
        tier: backend
        layer: web-server
    spec:
      containers:
      - name: librarika-nginx
        image: ghcr.io/alvianto21/ghcr.io/librarika_nginx:master
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "1Gi"
            cpu: "400m"
          requests:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: librarika-nginx-service
spec:
  selector:
    tier: backend
    layer: web-server
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-nginx
  labels:
    app.kubernetes.io/name: laravel-nginx
  annotations:
    cert-manager.io/cluster-issuer: "librarika-staging"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - www.127.0.0.1.nip.io
      secretName: librarika-tls
  rules:
  - host: www.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: librarika-nginx-service
            port: 
              number: 80
